Fix alignment of splasha photo with logos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3947,7 +3947,7 @@
 
 		.splash-image {
 				float: right;
-				width: 55%;
+				width: 52.6%;
 		}
 
 		.splash-image img {
@@ -4025,20 +4025,20 @@
 }
 
 #politico-logo {
-	height: 35px;
+	height: 40px;
 }
 
 
 #haas-logo {
-	height: 70px;
+	height: 80px;
 }
 
 #app-academy-logo {
-	height: 70px;
+	height: 80px;
 }
 
 #general-assembly-logo {
-	height: 90px;
+	height: 100px;
 }
 
 #node-logo {
